# DevHacks

./: .env  .gitignore  MONGODB_CLOUD_INTEGRATION.md  MONGODB_IMPLEMENTATION_SUMMARY.md  MULTIMODAL_IMPLEMENTATION.md  QUICKSTART_MONGODB.md  README.md  ROBUST_AGGREGATION_FEATURE.md  TEST_RESULTS.md  WEBSOCKET_SCHEMA.md  bandit_high.txt  bandit_report.json  config.py  gridfs_test.py  messages.py  node_registry.json  note_main.txt  note_spawnClients.txt  parse_bandit.py  pyproject.toml  requirements.txt
__MACOSX/: ._data
aggregation/: __init__.py  aggregator.py  coordinate_median.py  fedavg.py  reputation.py  trimmed_mean.py
async_federated_learning/: ARCHITECTURE.md  ASYNC_IMPLEMENTATION.md  ASYNC_VERIFICATION.md  COMPONENT_ATTRIBUTION.md  QUICKSTART.md  README.md  SECURE_AGGREGATION_SUMMARY.md  SUMMARY.md  comprehensive_test.py  config.py  demo_tokens.txt  main.py  node_registry.json  outlier_comparison.py  quick_test.py  requirements.txt  simple_privacy_comparison.py  users.json  users.json.example
async_federated_learning/aggregation/: aggregator.py  ensemble.py  (+5 more)
attacks/: byzantine.py
backend/: .env.example  app.py  app_mongo.py  pytest.ini  requirements.txt
core/: __init__.py  jwt_auth.py
detection/: anomaly.py  sabd.py
docs/: COMPONENT_ATTRIBUTION.md  TESTING_STRATEGY.md  presentation_content.md
evaluation/: metrics.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
models/: cnn.py
privacy/: dp.py
server/: model_history.py
terraform/: main.tf  variables.tf
tests/: test_aggregator.py
(+158 files in other folders)
